[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = "sample for fastAPI"
authors = ["negi524 <egtnrumpbiizarre.info@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
